fix links breaks on small devices

--- a/src/css/style.styl
+++ b/src/css/style.styl
@@ -340,3 +340,9 @@ footer
       width auto
     h1
       font-size 1.5em
+      
+  #readme
+    a
+      overflow-wrap break-word
+      word-wrap break-word
+      hyphens auto
